flux/apps/keycloak/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: keycloak
  type: ClusterIP
